--- a/src/component/landing.css
+++ b/src/component/landing.css
@@ -22,6 +22,7 @@
 
 .theme-search-area-section-icon {
     left: 10;
+    height: 53px;
 }
 
 .iconColor {
@@ -60,3 +61,8 @@
     letter-spacing: 1px;
     position: relative;
 }
+.lin {
+    line-height: 3;
+}
+
+
